<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/main_label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/main_label_type"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_type_spinner"
        app:layout_constraintEnd_toStartOf="@+id/main_type_spinner"
        app:layout_constraintTop_toTopOf="@+id/main_type_spinner" />

    <Spinner
        android:id="@+id/main_type_spinner"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:background="@drawable/spinner_box"
        app:layout_constraintEnd_toEndOf="@+id/main_query_input"
        app:layout_constraintTop_toBottomOf="@+id/main_query_input" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_title"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_query_input"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/main_recipe_input_placeholder"
        android:inputType="text"
        android:scaleType="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/main_label_diet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/main_label_diet"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_diet_spinner"
        app:layout_constraintEnd_toStartOf="@+id/main_diet_spinner"
        app:layout_constraintTop_toTopOf="@+id/main_diet_spinner" />

    <Spinner
        android:id="@+id/main_diet_spinner"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/spinner_box"
        app:layout_constraintEnd_toEndOf="@+id/main_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/main_type_spinner" />

    <SeekBar
        android:id="@+id/main_number_seekbar"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/main_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/main_diet_spinner" />

    <TextView
        android:id="@+id/main_label_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/main_label_number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_number_seekbar"
        app:layout_constraintEnd_toStartOf="@+id/main_number_seekbar"
        app:layout_constraintTop_toTopOf="@+id/main_number_seekbar" />

    <Button
        android:id="@+id/main_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_search_button"
        android:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/main_number_seekbar"
        app:layout_constraintTop_toBottomOf="@+id/main_number_seekbar" />

</androidx.constraintlayout.widget.ConstraintLayout>