<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bot_border"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/results_list_container">

    <ImageButton
        android:id="@+id/result_view_link_to_recipe"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:contentDescription="@string/result_view_imgbtn_alt"
        android:src="@drawable/link_to_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_view_aux_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bot_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_view_iv">

        <TextView
            android:id="@+id/result_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/result_view_aux_container"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_view_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_view_prep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_view_title" />

        <TextView
            android:id="@+id/result_view_diets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result_view_diets"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_view_prep" />

        <TextView
            android:id="@+id/result_view_prep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/result_view_prep"
            app:layout_constraintLeft_toRightOf="@+id/result_view_prep"
            app:layout_constraintTop_toTopOf="@+id/result_view_prep" />

        <TextView
            android:id="@+id/result_view_diets_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/result_view_diets"
            app:layout_constraintStart_toStartOf="@+id/result_view_prep_time"
            app:layout_constraintTop_toTopOf="@+id/result_view_diets"
            app:layout_constraintWidth_max="300dp" />

        <TextView
            android:id="@+id/result_view_score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result_view_score_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_view_diets" />

        <TextView
            android:id="@+id/result_view_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder"
            app:layout_constraintBottom_toBottomOf="@+id/result_view_score_title"
            app:layout_constraintStart_toStartOf="@+id/result_view_prep_time"
            app:layout_constraintTop_toTopOf="@+id/result_view_score_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/result_view_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:scrollbars = "vertical"
        android:text="@string/lorem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_view_aux_container"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <ImageView
        android:id="@+id/result_view_iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/result_view_image_alt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>